@@ -6,10 +6,23 @@ import java.util.Date;
 import java.util.Timer;
 import java.util.TimerTask;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+import com.soundlooper.audio.player.Player;
+import com.soundlooper.audio.player.Player.PlayerState;
+import com.soundlooper.exception.PlayerException;
+import com.soundlooper.exception.PlayerNotInitializedException;
+import com.soundlooper.gui.customComponent.util.ArrowFactory;
+import com.soundlooper.model.SoundLooperPlayer;
+import com.soundlooper.model.mark.Mark;
+import com.soundlooper.system.ImageGetter;
+import com.soundlooper.system.SoundLooperColor;
+import com.soundlooper.system.util.MessagingUtil;
+
 import javafx.application.Platform;
 import javafx.beans.InvalidationListener;
 import javafx.beans.Observable;
-import javafx.beans.binding.DoubleBinding;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
 import javafx.event.EventHandler;
@@ -29,37 +42,20 @@ import javafx.scene.shape.Line;
 import javafx.scene.shape.Polygon;
 import javafx.scene.shape.Rectangle;
 
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-
-import com.soundlooper.audio.player.Player;
-import com.soundlooper.audio.player.Player.PlayerState;
-import com.soundlooper.exception.PlayerException;
-import com.soundlooper.exception.PlayerNotInitializedException;
-import com.soundlooper.gui.customComponent.util.ArrowFactory;
-import com.soundlooper.model.SoundLooperPlayer;
-import com.soundlooper.model.mark.Mark;
-import com.soundlooper.system.ImageGetter;
-import com.soundlooper.system.SoundLooperColor;
-import com.soundlooper.system.util.MessagingUtil;
-
 public class PlayerViewSkin extends SkinBase<PlayerView> {
+
+	private Logger logger = LogManager.getLogger(this.getClass());
+
+	// -------- CONSTANTS and "statics" dimensions -----------//
 	private final static int TOP_MARGIN = 35;
 	private final static int BORDER_PADDING = 20;
 	private final static int MIN_HANDLE_SPACING = 2;
 	private final static int DEFAULT_DURATION = 1000;
 
-	private Logger logger = LogManager.getLogger(this.getClass());
 	private double handleWidth;
 	private double handleHeight;
 
-	ChangeListener<Number> markTimeListener = new ChangeListener<Number>() {
-		@Override
-		public void changed(ObservableValue<? extends Number> arg0, Number arg1, Number arg2) {
-			layout();
-		}
-	};
-
+	// -------- Graphicals elements -----------//
 	private Rectangle loopBarForeground;
 
 	private Rectangle unselectedZoneBegin;
@@ -68,9 +64,15 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 	private Line currentTimeLine;
 	private ImageView imageView;
 
-	Polygon leftHandle;
-	Polygon rightHandle;
+	private Polygon leftHandle;
+	private Polygon rightHandle;
 
+	private Border borderTop;
+	private Border borderBottom;
+
+	private FlowPane stackPane = new FlowPane();
+
+	// -------- Events variable -----------//
 	private double dragStartLeftHandlePx;
 	private boolean leftHandleDrag = false;
 
@@ -79,16 +81,18 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 
 	private double dragStartLoopBarForegroundPx;
 	private boolean loopBarForegroundDrag = false;
-
 	private double dragOffset;
 
+	// -------- Size change flags -----------//
 	private boolean invalidWidth = true;
 	private boolean invalidHeight = true;
-	Border borderTop;
-	Border borderBottom;
 
-	Pane pane = new Pane();
-	FlowPane stackPane = new FlowPane();
+	private ChangeListener<Number> markTimeListener = new ChangeListener<Number>() {
+		@Override
+		public void changed(ObservableValue<? extends Number> arg0, Number arg1, Number arg2) {
+			layout();
+		}
+	};
 
 	protected PlayerViewSkin(PlayerView control) {
 		super(control);
@@ -126,17 +130,20 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		soundLooperPlayer.currentSongImageProperty().addListener(new InvalidationListener() {
 			@Override
 			public void invalidated(Observable observable) {
-				logger.info("The image is changing in the player view " + new Date().getTime());
-				File file = soundLooperPlayer.currentSongImageProperty().get();
-				try {
-					imageView.setImage(new Image(file.toURI().toURL().toExternalForm()));
-					imageView.setSmooth(true);
-					// imageView.setPreserveRatio(false);
-					// layout();
-				} catch (MalformedURLException e) {
-					// This exception will normally never be throwed
-					logger.error("Unable to get new Image", e);
-				}
+				Platform.runLater(new Runnable() {
+
+					@Override
+					public void run() {
+						logger.info("The image is changing in the player view " + new Date().getTime());
+						File file = soundLooperPlayer.currentSongImageProperty().get();
+						try {
+							imageView.setImage(new Image(file.toURI().toURL().toExternalForm()));
+						} catch (MalformedURLException e) {
+							// This exception will normally never be throwed
+							logger.error("Unable to get new Image", e);
+						}
+					}
+				});
 			}
 		});
 
@@ -150,7 +157,9 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		});
 
 		imageView = new ImageView(ImageGetter.getDrawableURL("loading_32.png"));
+		imageView.setFitWidth(1);
 		imageView.setPreserveRatio(false);
+		imageView.setSmooth(true);
 
 		leftHandle = ArrowFactory.getArrow(0.7);
 		leftHandle.setFill(SoundLooperColor.getBlue());
@@ -178,20 +187,12 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		currentTimeLine = new Line(0, 0, 100, 100);
 		currentTimeLine.setStroke(SoundLooperColor.getSeparatorColor());
 
-		unselectedZoneEnd.xProperty().bind(rightHandle.translateXProperty());
-
-		DoubleBinding leftPropertyBinding = leftHandle.translateXProperty().add(handleWidth);
-		unselectedZoneBegin.widthProperty().bind(leftPropertyBinding.subtract(handleWidth));
-
-		loopBarForeground.xProperty().bind(leftPropertyBinding);
-		loopBarForeground.widthProperty().bind(rightHandle.translateXProperty().subtract(leftPropertyBinding));
-
 		getChildren().add(stackPane);
 		stackPane.setPadding(new Insets(0, BORDER_PADDING, 0, BORDER_PADDING));
 
 		Label e2 = new Label("Pane1");
-		e2.setBackground(new Background(new BackgroundFill(javafx.scene.paint.Color.BLUE, CornerRadii.EMPTY,
-				Insets.EMPTY)));
+		e2.setBackground(
+				new Background(new BackgroundFill(javafx.scene.paint.Color.BLUE, CornerRadii.EMPTY, Insets.EMPTY)));
 
 		Pane handlePanel = new Pane();
 		handlePanel.getChildren().add(leftHandle);
@@ -212,7 +213,6 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		stackPane.getChildren().add(borderBottom);
 
 		control.widthProperty().addListener(l -> {
-			System.out.println("Invalid width");
 			invalidWidth = true;
 		});
 		control.heightProperty().addListener(l -> {
@@ -244,7 +244,6 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 
 	@Override
 	protected void layoutChildren(double contentX, double contentY, double contentWidth, double contentHeight) {
-		System.out.println("contentWidth : " + contentWidth);
 		PlayerView playerView = getSkinnable();
 		SoundLooperPlayer player = playerView.getSoundLooperPlayer();
 
@@ -282,46 +281,56 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		}
 		double screenRight = getScreenRight(contentWidth);
 
-		unselectedZoneEnd.setWidth(screenRight - rightHandle.getTranslateX());
 		double screenHeight = getScreenHeight(contentHeight);
 		double screenWidth = getScreenWidth(contentWidth);
-		// if (invalidWidth || invalidHeight) {
 
-		// loopBarBackground.setWidth(getScreenWidth(contentWidth));
-		unselectedZoneBegin.setHeight(screenHeight);
+		unselectedZoneEnd.setWidth(screenRight - rightHandle.getTranslateX());
 
-		unselectedZoneEnd.setHeight(screenHeight);
-		stackPane.setPrefSize(contentWidth, contentHeight);
-		stackPane.setMaxSize(contentWidth, contentHeight);
-		stackPane.setMinSize(contentWidth, contentHeight);
+		unselectedZoneBegin.setWidth(leftHandle.getTranslateX());
+		unselectedZoneEnd.setX(rightHandle.getTranslateX());
 
-		imageView.setFitHeight(screenHeight);
-		imageView.setFitWidth(screenWidth);
-		imageView.setX(handleWidth);
-		imageView.setY(0);
-		imageView.setOnMouseClicked(me -> {
-			double newTimeMs = convertPxToMs(PlayerViewSkin.this.getSkinnable().getWidth(), me.getX());
-			setMediaTime(player, new Double(newTimeMs).intValue());
-			layout();
-			me.consume();
+		double loopBarLeft = leftHandle.getTranslateX() + handleWidth;
+		loopBarForeground.setX(loopBarLeft);
+		loopBarForeground.setWidth(rightHandle.getTranslateX() - loopBarLeft);
 
-		});
+		if (invalidWidth || invalidHeight) {
 
-		unselectedZoneBegin.setOnMouseClicked(me -> {
-			setMediaTimeBegin(player);
-			layout();
-			me.consume();
-		});
-		unselectedZoneEnd.setOnMouseClicked(me -> {
-			setMediaTimeBegin(player);
-			layout();
-			me.consume();
-		});
+			// loopBarBackground.setWidth(getScreenWidth(contentWidth));
+			unselectedZoneBegin.setHeight(screenHeight);
 
-		borderTop.setLineWidth(screenWidth);
-		borderBottom.setLineWidth(screenWidth);
+			unselectedZoneEnd.setHeight(screenHeight);
 
-		// }
+			stackPane.setPrefSize(contentWidth, contentHeight);
+			stackPane.setMaxSize(contentWidth, contentHeight);
+			stackPane.setMinSize(contentWidth, contentHeight);
+
+			imageView.setFitHeight(screenHeight);
+			imageView.setFitWidth(screenWidth);
+			imageView.setX(handleWidth);
+			imageView.setY(0);
+			imageView.setOnMouseClicked(me -> {
+				double newTimeMs = convertPxToMs(PlayerViewSkin.this.getSkinnable().getWidth(), me.getX());
+				setMediaTime(player, Double.valueOf(newTimeMs).intValue());
+				layout();
+				me.consume();
+
+			});
+
+			unselectedZoneBegin.setOnMouseClicked(me -> {
+				setMediaTimeBegin(player);
+				layout();
+				me.consume();
+			});
+			unselectedZoneEnd.setOnMouseClicked(me -> {
+				setMediaTimeBegin(player);
+				layout();
+				me.consume();
+			});
+
+			borderTop.setLineWidth(screenWidth);
+			borderBottom.setLineWidth(screenWidth);
+
+		}
 
 		double mediaTimePx = convertMsToPx(contentWidth, mediaTime, duration, true);
 
@@ -330,119 +339,125 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 		currentTimeLine.setStartY(0);
 		currentTimeLine.setEndY(screenHeight);
 
-		// if (invalidWidth) {
-		invalidWidth = false;
-		if (dragStartLeftHandlePx == 0) {
-			leftHandle.setOnMousePressed(me -> {
-				leftHandleDrag = true;
-				dragOffset = me.getSceneX() - leftHandle.getTranslateX();
-				dragStartLeftHandlePx = me.getSceneX();
-			});
+		if (invalidWidth) {
+			invalidWidth = false;
+			if (dragStartLeftHandlePx == 0) {
+				leftHandle.setOnMousePressed(me -> {
+					leftHandleDrag = true;
+					dragOffset = me.getSceneX() - leftHandle.getTranslateX();
+					dragStartLeftHandlePx = me.getSceneX();
+				});
 
-			leftHandle.setOnMouseDragged(me -> {
-				double move = me.getSceneX() - dragStartLeftHandlePx;
-				double newHandleX = dragStartLeftHandlePx + move - dragOffset;
-				if (newHandleX < 0) {
-					newHandleX = 0;
-				}
-				if (newHandleX + handleWidth + MIN_HANDLE_SPACING > rightHandle.getTranslateX()) {
-					newHandleX = rightHandle.getTranslateX() - handleWidth - MIN_HANDLE_SPACING;
-				}
-				leftHandle.setTranslateX(newHandleX);
-			});
+				leftHandle.setOnMouseDragged(me -> {
+					double move = me.getSceneX() - dragStartLeftHandlePx;
+					double newHandleX = dragStartLeftHandlePx + move - dragOffset;
+					if (newHandleX < 0) {
+						newHandleX = 0;
+					}
+					if (newHandleX + handleWidth + MIN_HANDLE_SPACING > rightHandle.getTranslateX()) {
+						newHandleX = rightHandle.getTranslateX() - handleWidth - MIN_HANDLE_SPACING;
+					}
+					leftHandle.setTranslateX(newHandleX);
+					layout();
+					me.consume();
+				});
 
-			leftHandle.setOnMouseReleased(me -> {
-				double newTimePx = leftHandle.getTranslateX() + handleWidth;
-				double newTimeMs = convertPxToMs(contentWidth, newTimePx);
-				leftHandleDrag = false;
-				dragStartLeftHandlePx = 0;
+				leftHandle.setOnMouseReleased(me -> {
+					double newTimePx = leftHandle.getTranslateX() + handleWidth;
+					double newTimeMs = convertPxToMs(contentWidth, newTimePx);
+					leftHandleDrag = false;
+					dragStartLeftHandlePx = 0;
 
-				setMediaTimeIfNeeded(player, contentWidth);
+					setMediaTimeIfNeeded(player, contentWidth);
 
-				setLoopPointBegin(player, newTimeMs);
-				layout();
-				me.consume();
-			});
+					setLoopPointBegin(player, newTimeMs);
+					layout();
+					me.consume();
+				});
+			}
+
+			if (dragStartRightHandlePx == 0) {
+				rightHandle.setOnMousePressed(me -> {
+					rightHandleDrag = true;
+					dragOffset = me.getSceneX() - rightHandle.getTranslateX();
+					dragStartRightHandlePx = me.getSceneX();
+				});
+
+				rightHandle.setOnMouseDragged(me -> {
+					double move = me.getSceneX() - dragStartRightHandlePx;
+
+					double newHandleX = dragStartRightHandlePx + move - dragOffset;
+
+					if (newHandleX > screenRight) {
+						newHandleX = screenRight;
+					}
+
+					if (newHandleX - MIN_HANDLE_SPACING < leftHandle.getTranslateX() + handleWidth) {
+						newHandleX = MIN_HANDLE_SPACING + leftHandle.getTranslateX() + handleWidth;
+					}
+
+					rightHandle.setTranslateX(newHandleX);
+					layout();
+					me.consume();
+				});
+
+				rightHandle.setOnMouseReleased(me -> {
+					double newTimePx = rightHandle.getTranslateX();
+					double newTimeMs = convertPxToMs(contentWidth, newTimePx);
+					dragStartRightHandlePx = 0;
+					rightHandleDrag = false;
+
+					setMediaTimeIfNeeded(player, contentWidth);
+					setLoopPointEnd(player, newTimeMs);
+					layout();
+					me.consume();
+				});
+			}
+
+			if (dragStartLoopBarForegroundPx == 0) {
+				loopBarForeground.setOnMousePressed(me -> {
+					loopBarForegroundDrag = true;
+					dragOffset = me.getSceneX() - loopBarForeground.getX();
+					dragStartLoopBarForegroundPx = me.getSceneX();
+				});
+
+				loopBarForeground.setOnMouseDragged(me -> {
+					double move = me.getSceneX() - dragStartLoopBarForegroundPx;
+					double newHandleX = dragStartLoopBarForegroundPx + move - dragOffset;
+					double positionLeftHandle = newHandleX - handleWidth;
+					double positionRightHandle = newHandleX + loopBarForeground.getWidth();
+					if (positionLeftHandle <= 0) {
+						positionLeftHandle = 0;
+						positionRightHandle = loopBarForeground.getWidth() + handleWidth;
+					}
+
+					if (positionRightHandle >= screenRight) {
+						positionRightHandle = screenRight;
+						positionLeftHandle = screenRight - loopBarForeground.getWidth() - handleWidth;
+					}
+
+					leftHandle.setTranslateX(positionLeftHandle);
+					rightHandle.setTranslateX(positionRightHandle);
+
+					layout();
+					me.consume();
+				});
+
+				loopBarForeground.setOnMouseReleased(me -> {
+					double newTimeBeginPx = loopBarForeground.getX();
+					double newTimeEndPx = loopBarForeground.getX() + loopBarForeground.getWidth();
+					double newTimeBeginMs = convertPxToMs(contentWidth, newTimeBeginPx);
+					double newTimeEndMs = convertPxToMs(contentWidth, newTimeEndPx);
+					dragStartLoopBarForegroundPx = 0;
+					loopBarForegroundDrag = false;
+
+					setLoopPoints(player, newTimeBeginMs, newTimeEndMs);
+					layout();
+					me.consume();
+				});
+			}
+
 		}
-
-		if (dragStartRightHandlePx == 0) {
-			rightHandle.setOnMousePressed(me -> {
-				rightHandleDrag = true;
-				dragOffset = me.getSceneX() - rightHandle.getTranslateX();
-				dragStartRightHandlePx = me.getSceneX();
-			});
-
-			rightHandle.setOnMouseDragged(me -> {
-				double move = me.getSceneX() - dragStartRightHandlePx;
-
-				double newHandleX = dragStartRightHandlePx + move - dragOffset;
-
-				if (newHandleX > screenRight) {
-					newHandleX = screenRight;
-				}
-
-				if (newHandleX - MIN_HANDLE_SPACING < leftHandle.getTranslateX() + handleWidth) {
-					newHandleX = MIN_HANDLE_SPACING + leftHandle.getTranslateX() + handleWidth;
-				}
-
-				rightHandle.setTranslateX(newHandleX);
-			});
-
-			rightHandle.setOnMouseReleased(me -> {
-				double newTimePx = rightHandle.getTranslateX();
-				double newTimeMs = convertPxToMs(contentWidth, newTimePx);
-				dragStartRightHandlePx = 0;
-				rightHandleDrag = false;
-
-				setMediaTimeIfNeeded(player, contentWidth);
-				setLoopPointEnd(player, newTimeMs);
-				layout();
-				me.consume();
-			});
-		}
-
-		if (dragStartLoopBarForegroundPx == 0) {
-			loopBarForeground.setOnMousePressed(me -> {
-				loopBarForegroundDrag = true;
-				dragOffset = me.getSceneX() - loopBarForeground.getX();
-				dragStartLoopBarForegroundPx = me.getSceneX();
-			});
-
-			loopBarForeground.setOnMouseDragged(me -> {
-				double move = me.getSceneX() - dragStartLoopBarForegroundPx;
-				double newHandleX = dragStartLoopBarForegroundPx + move - dragOffset;
-				double positionLeftHandle = newHandleX - handleWidth;
-				double positionRightHandle = newHandleX + loopBarForeground.getWidth();
-				if (positionLeftHandle <= 0) {
-					positionLeftHandle = 0;
-					positionRightHandle = loopBarForeground.getWidth() + handleWidth;
-				}
-
-				if (positionRightHandle >= screenRight) {
-					positionRightHandle = screenRight;
-					positionLeftHandle = screenRight - loopBarForeground.getWidth() - handleWidth;
-				}
-
-				leftHandle.setTranslateX(positionLeftHandle);
-				rightHandle.setTranslateX(positionRightHandle);
-
-			});
-
-			loopBarForeground.setOnMouseReleased(me -> {
-				double newTimeBeginPx = loopBarForeground.getX();
-				double newTimeEndPx = loopBarForeground.getX() + loopBarForeground.getWidth();
-				double newTimeBeginMs = convertPxToMs(contentWidth, newTimeBeginPx);
-				double newTimeEndMs = convertPxToMs(contentWidth, newTimeEndPx);
-				dragStartLoopBarForegroundPx = 0;
-				loopBarForegroundDrag = false;
-
-				setLoopPoints(player, newTimeBeginMs, newTimeEndMs);
-				layout();
-				me.consume();
-			});
-		}
-
-		// }
 		invalidWidth = false;
 		invalidHeight = false;
 	}
@@ -450,7 +465,7 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 	private void setLoopPointBegin(SoundLooperPlayer player, double newTimeBeginMs) {
 		try {
 			if (player.isSoundInitialized()) {
-				player.setLoopPointBegin(new Double(newTimeBeginMs).intValue());
+				player.setLoopPointBegin(Double.valueOf(newTimeBeginMs).intValue());
 			}
 		} catch (PlayerException e) {
 			MessagingUtil.displayError("Impossible de modifier la position de début", e);
@@ -460,7 +475,8 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 	private void setLoopPoints(SoundLooperPlayer player, double newTimeBeginMs, double newTimeEndMs) {
 		try {
 			if (player.isSoundInitialized()) {
-				player.setLoopPoints(new Double(newTimeBeginMs).intValue(), new Double(newTimeEndMs).intValue());
+				player.setLoopPoints(Double.valueOf(newTimeBeginMs).intValue(),
+						Double.valueOf(newTimeEndMs).intValue());
 			}
 		} catch (PlayerException e) {
 			MessagingUtil.displayError("Impossible de modifier les positions", e);
@@ -470,7 +486,7 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 	private void setLoopPointEnd(SoundLooperPlayer player, double newTimeEndMs) {
 		try {
 			if (player.isSoundInitialized()) {
-				player.setLoopPointEnd(new Double(newTimeEndMs).intValue());
+				player.setLoopPointEnd(Double.valueOf(newTimeEndMs).intValue());
 			}
 		} catch (PlayerException e) {
 			MessagingUtil.displayError("Impossible de modifier la position de fin", e);
@@ -488,7 +504,7 @@ public class PlayerViewSkin extends SkinBase<PlayerView> {
 	private void setMediaTime(Player player, double newTime) {
 		try {
 			if (player.isSoundInitialized()) {
-				player.setMediaTime(new Double(newTime).intValue());
+				player.setMediaTime(Double.valueOf(newTime).intValue());
 			}
 		} catch (PlayerException e) {
 			MessagingUtil.displayError("Impossible de modifier la position actuelle", e);
